kubernetes/main/components/httproute/external/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  namespace: ${NAMESPACE:default}
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "${SUBDOMAIN}.dcunha.io"
    gatus.home-operations.com/endpoint: |-
      interval: 30s
      group: external-access
      ui:
        hide-hostname: true
        hide-url: true
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
spec:
  parentRefs:
    - name: external-gateway
      namespace: default # <--- CRITICAL: Gateway is in 'default' namespace
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP} # Name of the Kubernetes Service
          port: ${ACCESS_PORT} # Port of the Kubernetes Service
